<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:backgroundTint="@color/light_blue"
    tools:context="com.example.bla_bla_train.MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fromInput"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginTop="108dp"
        android:hint="@string/from_input_hint"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColorHint="@color/dark_text_blue"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="496dp"
        android:backgroundTint="@color/dark_yellow"
        android:text="@android:string/ok"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/timeInput"
        android:layout_width="258dp"
        android:layout_height="236dp"
        android:layout_marginTop="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/depTime1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dep_time_1"
            android:textColor="@color/gray" />

        <RadioButton
            android:id="@+id/depTime2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dep_time_2"
            android:textColor="@color/gray" />

        <RadioButton
            android:id="@+id/depTime3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dep_time_3"
            android:textColor="@color/gray" />

        <RadioButton
            android:id="@+id/depTime4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dep_time_4"
            android:textColor="@color/gray" />

        <RadioButton
            android:id="@+id/depTime5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/dep_time_5"
            android:textColor="@color/gray"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/toInput"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginTop="164dp"
        android:hint="@string/to_input_hint"
        android:textAlignment="textStart"
        android:textColorHint="@color/dark_text_blue"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>